# Servafri

./: .replit  Pasted--InvalidRequestError-sqlalchemy-exc-InvalidRequestError-Entity-namespace-for-vm-has-no-property-1726644193065.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-user-b-1726641712229.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-vm-ip--1727000558541.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-vm-sta-1726644548462.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-vm-sta-1726644887524.txt  Pasted--TypeError-TypeError-must-be-real-number-not-NoneType-Traceback-most-recent-call-last-File-1726642449098.txt  Pasted-AttributeError-AttributeError-Flask-object-has-no-attribute-login-manager-Traceback-most-r-1727565269448.txt  Pasted-AttributeError-AttributeError-NoneType-object-has-no-attribute-db-Traceback-most-recent-ca-1727644454096.txt  Pasted-AttributeError-AttributeError-NoneType-object-has-no-attribute-db-Traceback-most-recent-ca-1727868961903.txt  Pasted-AttributeError-AttributeError-NoneType-object-has-no-attribute-users-Traceback-most-recent-1727565013081.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-auth-compute--1726645776146.txt  Pasted-DEBUG-root-Initializing-extensions-py-DEBUG-pymongo-topology-topologyId-oid-66fd031c01e25-1727857544078.txt  api.py  auth.py  auth0_setup.md  azure_utils.py  (+18 more)
(+13 files in other folders)
